# IoT-Edge-Computing-Load-Balancing

./: README.md  docker-compose.yml
edge-layer/axum_node/: Cargo.toml  Dockerfile  README.md
edge-layer/axum_node/src/: main.rs  utils.rs
edge-layer/axum_node/src/models/: sensor_data.rs
edge-layer/axum_node/src/mqtt/: listener.rs  mod.rs
edge-layer/axum_node/src/routes/: mod.rs  sensor_data.rs
python/: README.md  requirements.txt  sensor_simulation.py
rust/axum_node/: Cargo.toml
rust/axum_node/src/: app.rs  main.rs
rust/axum_node/src/handlers/: sensor_handler.rs
sensor-simulations/: Dockerfile.sensor  requirements.txt  sensor_simulation.py
