[package]
name = "axum_node"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
rumqttc = "0.24.0"
pretty_env_logger = "0.5.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.1"
reqwest = { version = "0.12.8", features = ["json"] }